// Copyright (c) 2019 Cisco and/or its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at:
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package idallocation;

// IDAllocation represents a VXLAN VNI allocation made for the specified unique VXLAN name
message AllocationPool {
    string name = 1; // name of the pool (e.g. "vni", "vrf", etc.)

    message Range {
        uint32 min_id = 1;            // first allocate-able ID
        uint32 max_id = 2;            // last allocate-able ID
        repeated uint32 reserved = 3; // reserved (non-allocate-able) IDs
    }
    Range range = 2; // specification of the pool range

    // map of all allocations, key is the allocation "label"
    // describing its purpose (e.g. nework name for vrf pool, etc.)
    map<string, uint32> id_allocations = 3;
}
